force-app/main/default/objects/FE_Feedback__c/FE_Feedback__c.object-meta.xml
<CustomObject>
    <description>To capture direct customer feedback.</description>
    <label>FE Feedback</label>
    <nameField>
        <label>Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FE Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>