force-app/main/default/objects/FE_Feedback__c/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <description>Auto Populated on submission the current date</description>
    <label>Date Submitted</label>
    <type>DateTime</type>
</CustomField>