force-app/main/default/objects/FE_Feedback__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed explanation of the feedback</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>