force-app/main/default/objects/FE_Feedback__c/fields/Related_Enhancement_Request__c.field-meta.xml
<CustomField>
    <fullName>Related_Enhancement_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To link feedback back to an enhancement.</description>
    <label>Related Enhancement Request</label>
    <referenceTo>FE_Enhancement_Request__c</referenceTo>
    <relationshipName>Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>