force-app/main/default/objects/FE_Feedback__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Short Summary of the feedback</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>