force-app/main/default/objects/FE_Feedback__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who submitted the feedback.</description>
    <label>Submitted By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>