force-app/main/default/objects/FE_Feedback__c/validationRules/Description_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Description__c), ISPICKVAL(Feedback_Type__c, &apos;Bug Report&apos;))</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>Description is mandatory for bug reports.</errorMessage>
</ValidationRule>